@@ -9,6 +9,8 @@ ChangeLog for PyLint
     * setuptools/easy_install support
     * include a modified version of Maarten ter Huurne patch to avoid W0613
       warning on arguments from overridden method
+    * implement #5575  drop dumb W0704 message) by adding W0704 to ignored
+      messages by default
     * fix W0631 false positive reported by Paul Hachmann
     * fix #6949
     * patches by Mads Kiilerich:
